[package]
name = "hub-system"
description = "Hub system"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"
publish = false
license = "MIT OR APACHE"
readme = "README.md"
repository = "https://github.com/dmweis/hub-system"

[package.metadata.deb]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"
conf-files = ["/etc/hub_system/settings.yaml"]
assets = [
    [
        "target/release/hub-system",
        "/usr/bin/",
        "755",
    ],
    [
        "configuration/settings.yaml",
        "/etc/hub_system/settings.yaml",
        "644",
    ],
]

[package.metadata.deb.systemd-units]

[dependencies]
