[package]
name = "hub-system"
description = "Hub system"
version = "0.3.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"
publish = false
license = "MIT OR APACHE"
readme = "README.md"
repository = "https://github.com/dmweis/hub-system"

[package.metadata.deb]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"
conf-files = ["/etc/hub_system/settings.yaml"]
assets = [
    [
        "target/release/hub-system",
        "/usr/bin/",
        "755",
    ],
    [
        "configuration/settings.yaml",
        "/etc/hub_system/settings.yaml",
        "644",
    ],
]

[package.metadata.deb.systemd-units]

[dependencies]
simplelog = "0.11"
log = "0.4"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
mqtt-router = { git = "https://github.com/dmweis/mqtt-router", branch = "main" }
rumqttc = "0.13.0"
reqwest = { version = "0.11" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.11"
thiserror = "1.0"
anyhow = "1.0"
